[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bootstrapper"
version = "0.1.0"
description = "Build out your scaffold."
authors = [{ name = "gadgetsaavy", email = "c.hirschauer@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/74Thirsty/bootstrapper"
